tests/ui/consts/const-integer-bool-ops.stderr
error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:1:18
   |
LL | const X: usize = 42 && 39;
   |                  ^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:1:24
   |
LL | const X: usize = 42 && 39;
   |                        ^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:1:18
   |
LL | const X: usize = 42 && 39;
   |                  ^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:8:18
   |
LL | const ARR: [i32; X] = [99; 34];
   |                  ^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:10:19
   |
LL | const X1: usize = 42 || 39;
   |                   ^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:10:25
   |
LL | const X1: usize = 42 || 39;
   |                         ^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:10:19
   |
LL | const X1: usize = 42 || 39;
   |                   ^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:17:19
   |
LL | const ARR1: [i32; X1] = [99; 47];
   |                   ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:19:19
   |
LL | const X2: usize = -42 || -39;
   |                   ^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:19:26
   |
LL | const X2: usize = -42 || -39;
   |                          ^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:19:19
   |
LL | const X2: usize = -42 || -39;
   |                   ^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:26:19
   |
LL | const ARR2: [i32; X2] = [99; 18446744073709551607];
   |                   ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:28:19
   |
LL | const X3: usize = -42 && -39;
   |                   ^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:28:26
   |
LL | const X3: usize = -42 && -39;
   |                          ^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:28:19
   |
LL | const X3: usize = -42 && -39;
   |                   ^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:35:19
   |
LL | const ARR3: [i32; X3] = [99; 6];
   |                   ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:37:18
   |
LL | const Y: usize = 42.0 == 42.0;
   |                  ^^^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:40:19
   |
LL | const ARRR: [i32; Y] = [99; 1];
   |                   ^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:42:19
   |
LL | const Y1: usize = 42.0 >= 42.0;
   |                   ^^^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:45:20
   |
LL | const ARRR1: [i32; Y1] = [99; 1];
   |                    ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:47:19
   |
LL | const Y2: usize = 42.0 <= 42.0;
   |                   ^^^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:50:20
   |
LL | const ARRR2: [i32; Y2] = [99; 1];
   |                    ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:52:19
   |
LL | const Y3: usize = 42.0 > 42.0;
   |                   ^^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:55:20
   |
LL | const ARRR3: [i32; Y3] = [99; 0];
   |                    ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:57:19
   |
LL | const Y4: usize = 42.0 < 42.0;
   |                   ^^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:60:20
   |
LL | const ARRR4: [i32; Y4] = [99; 0];
   |                    ^^

error[E0308]: mismatched types
  --> $DIR/const-integer-bool-ops.rs:62:19
   |
LL | const Y5: usize = 42.0 != 42.0;
   |                   ^^^^^^^^^^^^ expected `usize`, found `bool`

note: erroneous constant encountered
  --> $DIR/const-integer-bool-ops.rs:65:20
   |
LL | const ARRR5: [i32; Y5] = [99; 0];
   |                    ^^

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0308`.
